# Ensemble-Pytorch

./: .all-contributorsrc  .codecov.yml  .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MINIFEST.in  README.md  README.rst  TODO.md  debug.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-test.yml  code-quality.yml  (+2 more)
build_tools/: cleanup.bat  linting.sh  requirements.txt
docs/: advanced.rst  changelog.rst  code_of_conduct.rst  conf.py  contributors.rst  experiment.rst  experiments.xlsx  guide.rst  index.rst  introduction.rst  parameters.rst  quick_start.rst  requirements.txt  roadmap.rst  tutorial.rst
ensemble/: _base.py  averaging.py  bagging.py  baggingclassifier.py  basemodule.py  deepstackingclassifier.py  fusion.py  gradient_boosting.py  gradientboostingclassifier.py  stackingclassifier.py  voting.py  votingclassifier.py
examples/: DATASET.txt  classification_cifar10_cnn.py  classification_mnist_tree_ensemble.py  fast_geometric_ensemble_cifar10_resnet18.py  lenet5.py  mlp.py  regression_YearPredictionMSD_mlp.py  snapshot_ensemble_cifar10_resnet18.py
learner/: LeNet5.py  Linear.py  MLP.py
model/: MLP.py  SDT.py  lenet5.py
script/: cifar_cnn_demo.py  classification_cifar10_cnn.py  mnist_cnn_demo.py  regression_YearPredictionMSD_mlp.py
torchensemble/: __init__.py  _base.py  _constants.py  adversarial_training.py  bagging.py  fast_geometric.py  fusion.py  gradient_boosting.py  snapshot_ensemble.py  soft_gradient_boosting.py  utils.py  voting.py
(+34 files in other folders)
