[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy>=1.13.3,<1.20.0",
    "torch>=1.4.0",
    "torchvision>=0.2.2",
    "scikit-learn>=0.23.0"
]
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''